# cryptographic-application-lab

./: .gitignore  README.md
REPORT_LAB/Vũ Trọng Hưng/lab1/lab1/: .nonce_db.json  Benchmarker.cpp  Benchmarker.hpp  CMakeLists.txt  CryptoConfig.cpp  CryptoConfig.hpp  CryptoToolGUI.spec  FileEncryptor.cpp  FileEncryptor.hpp  KATRunner.cpp  KATRunner.hpp  Lab1_Report.md  NISTValidator.cpp  NISTValidator.hpp  NegativeTests.cpp  NegativeTests.hpp  gui.py  main.cpp  performance_report.csv  plot_benchmarks.py  test_vectors.json
REPORT_LAB/Vũ Trọng Hưng/lab1/lab1/build_linux/: .nonce_db.json  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dummy.enc.json  unit_tests
REPORT_LAB/Vũ Trọng Hưng/lab1/lab1/results/: linux_benchmark_stats.csv  os_comparison_benchmark_stats.csv  windows_benchmark_stats.csv
REPORT_LAB/Vũ Trọng Hưng/lab1/lab1/results/linux_runs/: performance_report_linux_run_01.csv  performance_report_linux_run_02.csv  performance_report_linux_run_03.csv  performance_report_linux_run_04.csv  performance_report_linux_run_05.csv  performance_report_linux_run_06.csv  performance_report_linux_run_07.csv  performance_report_linux_run_08.csv  performance_report_linux_run_09.csv  performance_report_linux_run_10.csv  performance_report_linux_run_11.csv  performance_report_linux_run_12.csv  performance_report_linux_run_13.csv  performance_report_linux_run_14.csv  performance_report_linux_run_15.csv  performance_report_linux_run_16.csv  performance_report_linux_run_17.csv  performance_report_linux_run_18.csv  performance_report_linux_run_19.csv  performance_report_linux_run_20.csv  performance_report_linux_run_21.csv  performance_report_linux_run_22.csv  performance_report_linux_run_23.csv  performance_report_linux_run_24.csv  performance_report_linux_run_25.csv  performance_report_linux_run_26.csv  performance_report_linux_run_27.csv  performance_report_linux_run_28.csv  (+2 more)
REPORT_LAB/Vũ Trọng Hưng/lab1/lab1/scripts/: analyze_benchmark_stats.py  compare_os_benchmark_stats.py  plot_stats_charts.py  run_linux_aes_benchmarks.py  run_windows_aes_benchmarks.py
REPORT_LAB/Vũ Trọng Hưng/lab1/lab1/tests/: unit_tests.cpp
REPORT_LAB/Vũ Trọng Hưng/lab3/lab3/: CMakeCache.txt  CMakeLists.txt  HybridEncryptor.cpp  HybridEncryptor.hpp  ManualOAEP.cpp  ManualOAEP.hpp  NegativeTests.cpp  NegativeTests.hpp  OAEPValidator.cpp  RSABenchmarker.cpp  RSABenchmarker.hpp  RSAConfig.cpp  RSAConfig.hpp  RSAEngine.cpp  RSAEngine.hpp  RSAKeyManager.cpp  RSAKeyManager.hpp  RSAValidator.cpp  RSAValidator.hpp  main.cpp  test_vectors_rsa.json
REPORT_LAB/Vũ Trọng Hưng/lab3/lab3/build_linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
REPORT_LAB/Vũ Trọng Hưng/lab3/lab3/cli_test/: ct.bin.json  priv.der  priv.pem  pub.der  pub.pem  pub.pem.metadata.json
REPORT_LAB/Vũ Trọng Hưng/lab3/lab3/results/: linux_benchmark_stats.csv  windows_benchmark_stats.csv
REPORT_LAB/Vũ Trọng Hưng/lab3/lab3/scripts/: analyze_rsa_benchmark_stats.py  plot_os_comparison.py  plot_rsa_benchmark.py  plot_rsa_stats.py  run_linux_benchmarks.py  run_windows_benchmarks.py
REPORT_LAB/Vũ Trọng Hưng/lab3/lab3/tests/: unit_tests.cpp
REPORT_LAB/Vũ Trọng Hưng/lab4/lab4/: CMakeLists.txt  CertificateAnalyzer.cpp  CertificateAnalyzer.hpp  CustomSHA256Extend.cpp  CustomSHA256Extend.hpp  HashBenchmarker.cpp  HashBenchmarker.hpp  HashConfig.cpp  HashConfig.hpp  HashEngine.cpp  HashEngine.hpp  HashValidator.cpp  HashValidator.hpp  MD5CollisionDemo.cpp  MD5CollisionDemo.hpp  NegativeTests.cpp  NegativeTests.hpp  main.cpp  test_vectors.json
REPORT_LAB/Vũ Trọng Hưng/lab4/lab4/build_linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hashtool  unit_tests
REPORT_LAB/Vũ Trọng Hưng/lab4/lab4/cpu_evidence/: linux_mpstat_log.txt  linux_pidstat_log.txt  windows_cpu_counter_log.txt
REPORT_LAB/Vũ Trọng Hưng/lab4/lab4/results/: linux_hash_benchmark_stats.csv  windows_hash_benchmark_stats.csv
REPORT_LAB/Vũ Trọng Hưng/lab4/lab4/scripts/: analyze_hash_benchmark_stats.py  plot_hash_benchmark.py  plot_os_comparison.py  run_linux_hash_benchmarks.py  run_windows_hash_benchmarks.py
REPORT_LAB/Vũ Trọng Hưng/lab4/lab4/tests/: unit_tests.cpp
REPORT_LAB/Vũ Trọng Hưng/lab5/lab5/: BatchVerifier.cpp  BatchVerifier.hpp  CMakeLists.txt  ECDSAEngine.cpp  ECDSAEngine.hpp  ManualRSAPSS.cpp  ManualRSAPSS.hpp  ModularArithmetic.cpp  ModularArithmetic.hpp  NegativeTests.cpp  NegativeTests.hpp  RSAPSSEngine.cpp  RSAPSSEngine.hpp  SigBenchmarker.cpp  SigBenchmarker.hpp  SigConfig.cpp  SigConfig.hpp  SigKAT.cpp  SigKAT.hpp  SigKeyManager.cpp  SigKeyManager.hpp  main.cpp  test_vectors.json
REPORT_LAB/Vũ Trọng Hưng/lab5/lab5/build_linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
REPORT_LAB/Vũ Trọng Hưng/lab5/lab5/results/: combined_signature_benchmark_stats.csv  linux_signature_benchmark_stats.csv  windows_signature_benchmark_stats.csv
REPORT_LAB/Vũ Trọng Hưng/lab5/lab5/scripts/: analyze_sig_benchmark_stats.py  plot_benchmarks.py  plot_comparison.py  plot_latency.py  plot_sig_benchmark.py  run_linux_sig_benchmarks.py  run_windows_sig_benchmarks.py
REPORT_LAB/Vũ Trọng Hưng/lab5/lab5/tests/: unit_tests.cpp
REPORT_LAB/Vũ Trọng Hưng/lab6/lab6/: CMakeLists.txt  MLDSAEngine.cpp  MLDSAEngine.hpp  MLKEMEngine.cpp  MLKEMEngine.hpp  PQBenchmarker.cpp  PQBenchmarker.hpp  PQCertificate.cpp  PQCertificate.hpp  PQConfig.hpp  PQKeyManager.cpp  PQKeyManager.hpp  PQNegativeTests.cpp  PQNegativeTests.hpp  README.md  SELF_GRADE_CHECKLIST.md  main.cpp
REPORT_LAB/Vũ Trọng Hưng/lab6/lab6/lab6/: CMakeLists.txt  MLDSAEngine.cpp  MLDSAEngine.hpp  MLKEMEngine.cpp  MLKEMEngine.hpp  PQBatchTools.cpp  PQBatchTools.hpp  PQCertificate.cpp  PQCertificate.hpp  PQConfig.cpp  PQConfig.hpp  PQKAT.cpp  PQKAT.hpp  PQKeyManager.cpp  PQKeyManager.hpp  PQNegativeTests.cpp  PQNegativeTests.hpp  cert.json  main.cpp  mldsa44_priv.pem  mldsa44_pub.pem  mldsa65_priv.pem  mldsa65_pub.pem  mlkem512_priv.pem  mlkem512_pub.pem  test_vectors.json
REPORT_LAB/Vũ Trọng Hưng/lab6/lab6/tests/: unit_tests.cpp
(+269 files in other folders)
